--- a/app/templates/auth/employee_login.html
+++ b/app/templates/auth/employee_login.html
@@ -3,17 +3,16 @@
 
 <!-- Styles block -->
 
-{% block styles%}
+{% block styles %}
 {{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='css/admin_register.css')}}">
+<link rel="stylesheet" href="{{url_for('static',filename='css/login.css')}}">
 {% endblock %}
 
-{% block content %}
 
+
+{% block content %}
 <div class="container">
   {{wtf.quick_form(login_form)}}
 </div>
 
-
-
-{% endblock%}
+{% endblock %}
