--- a/app/templates/auth/employee_register.html
+++ b/app/templates/auth/employee_register.html
@@ -5,7 +5,7 @@
 
 {% block styles%}
 {{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='css/admin_register.css')}}">
+<link rel="stylesheet" href="{{url_for('static',filename='css/register.css')}}">
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,11 @@
 <div class="container">
   {{wtf.quick_form(registration_form)}}
 </div>
-
+<div>
+  <h1>
+    <a href="/authenticate/employeelogin">Already have an Employee Account?LogIn Here</a>
+  </h1>
+</div>
 
 
 {% endblock%}
